# sentinel-blocks

./: .gitignore  CONTRIBUTING.md  LORE.md  README.md  SECURITY.md  SPEC.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: PROMPTING.md  WHY-IT-WORKS.md
examples/: anthropic_python.py  openai-node.mjs
examples/ejs/: prompt.ejs  render.mjs
examples/prompts/: codegen-files.md  json-extraction.md
implementations/c/: sentinel_blocks.c  sentinel_blocks.h  test_sentinel_blocks.c
implementations/cpp/: sentinel_blocks.hpp  test_sentinel_blocks.cpp
implementations/go/: go.mod  sentinelblocks.go  sentinelblocks_test.go
implementations/java/: SentinelBlocks.java  SentinelBlocksTest.java
implementations/javascript/: sentinel-blocks.cjs  sentinel-blocks.mjs
implementations/php/: sentinel_blocks.php  test_sentinel_blocks.php
implementations/ruby/: sentinel_blocks.rb  test_sentinel_blocks.rb
implementations/rust/: Cargo.toml
implementations/rust/src/: lib.rs
python/sentinel_blocks/: __init__.py
site/: index.html
src/: index.ts
tests/: test_core.cjs  test_core.mjs  test_core.py  test_core.ts
